Fix layout issues

--- a/desktop/src/app/components/docedit/core/edit-form-group.scss
+++ b/desktop/src/app/components/docedit/core/edit-form-group.scss
@@ -1,5 +1,5 @@
 edit-form-group {
-  .card {
+  .edit-form-field-container {
     margin-right: 15px;
 
     .card-header {
