--- a/desktop/src/app/components/docedit/core/edit-form.scss
+++ b/desktop/src/app/components/docedit/core/edit-form.scss
@@ -89,14 +89,16 @@
               box-shadow: none;
             }
 
-            .btn-success,
-            .btn-danger:not(.btn-sm),
-            .btn-info,
-            .btn-outline-primary,
-            .btn-secondary {
-              height: 33px;
-              width: 34px;
-              padding: 0;
+            .input-group {
+              .btn-success,
+              .btn-danger:not(.btn-sm),
+              .btn-info,
+              .btn-outline-primary,
+              .btn-secondary {
+                height: 33px;
+                width: 34px;
+                padding: 0;
+              }
             }
 
             .delete-multi-input-entry .mdi,
